# adventuria-real-xp

godot/: icon.svg.import  project.godot  rust.gdextension  rust.gdextension.uid
godot/scenes/: main.tscn  player.tscn
rust/: .gitignore  Cargo.toml  build.rs
rust/src/: auth_action.rs  create_node.rs  interaction.rs  lib.rs  movable.rs  player.rs  player_movement.rs  test_action.rs  test_interaction.rs
rust/src/auth/: auth_action.rs  auth_form.rs  mod.rs
rust/src/interaction/: action.rs  interactive.rs  interactive_static_body_3d.rs  mod.rs
rust/src/player/: camera.rs  interactor.rs  mod.rs  movement.rs  player.rs  state.rs  state_controller.rs
rust/src/pocketbase/: client.rs
rust/src/state_machine/: state.rs
rust/src/states/: input_state.rs  input_state_listener.rs  mod.rs
