[package]
name = "adventuria_real_xp"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
godot = "0.4.5"
godot_tokio = { git = "https://github.com/ShadowDash2000/godot_tokio" }
reqwest = { version = "0.13.1", default-features = false, features = ["json", "rustls-no-provider"] }
rustls = { version = "0.23.36", default-features = false, features = ["ring"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
