[package]
name = "adventuria_real_xp"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
godot = "0.4.5"
rustls = { version = "0.23.36", default-features = false, features = ["ring"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
pocketbase-sdk = { git = "https://github.com/ShadowDash2000/pocketbase-sdk-rust" }
const_env = "0.1.5"
gdext_coroutines = { git = "https://github.com/ShadowDash2000/gdext_coroutines", features = ["async"] }

[build-dependencies]
dotenvy = "0.15.7"
